# minecraftstatus

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: black.yml
docs/: conf.py  index.rst  make.bat  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
examples/: achievement_image.py  server_card.py  server_info.py  splash_text.py
mcutility/: __init__.py  client.py  http.py  server.py  server_status.py
minecraftstatus/: __init__.py  client.py  errors.py  http.py  server_status.py
