[tool.poetry]
name = "minecraftstatus"
version = "0.0.7"
description = "minecraftstatus is an asynchronous wrapper for https://api.iapetus11.me."
authors = ["Infernum1"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Infernum1/minecraftstatus"

[tool.poetry.dependencies]
python = ">3.6"
aiohttp = "^3.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
